Added CSV and email support. Added Beep notifications for every tally.

--- a/ResearchTools/www/report.html
+++ b/ResearchTools/www/report.html
@@ -32,11 +32,11 @@
 	<div data-role="content">
             <h1>Results</h1>
             <br />
-            <table border="1" id="states-table">
+            <table border="1" id="states-table" align="center">
                 
             </table>
             <br />
-            <table border="1" id="events-table">
+            <table border="1" id="events-table" align="center">
             </table>
         
 			<a href="index.html" data-role="button">Start Over</a>
