Removed test buttons from front page.

--- a/ResearchTools/www/index.html
+++ b/ResearchTools/www/index.html
@@ -26,10 +26,10 @@
                 <a href="observe.html" rel="external" data-role="button">Observe</a>
                 <a href="settings.html" rel="external" data-role="button">Settings</a>
                 
-                <button onclick=testbeep()>Test Beep</button>
+                <!--<button onclick=testbeep()>Test Beep</button>
                 <button onclick=testnotify()>Test Notify</button>
                 <button onclick=email()>Test Email</button>
-                
+                -->
             </div><!-- /content -->
         </div><!-- /page -->
     </body>
