added utility buttons for testing email and explicitly sendig email.

--- a/ResearchTools/www/index.html
+++ b/ResearchTools/www/index.html
@@ -28,8 +28,8 @@
                 
                 <!--<button onclick=testbeep()>Test Beep</button>
                 <button onclick=testnotify()>Test Notify</button>
-                <button onclick=email()>Test Email</button>
-                -->
+                --><button onclick=email(" ")>Test Email</button>
+                
             </div><!-- /content -->
         </div><!-- /page -->
     </body>
