--- a/ResearchTools/www/report.html
+++ b/ResearchTools/www/report.html
@@ -39,6 +39,7 @@
             <table border="1" id="events-table" align="center">
             </table>
         
+        	<button onclick=email_csv()>Send E-mail</button>
 			<a href="index.html" data-role="button">Start Over</a>
             <br />
             <br />
